--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,13 @@
   <div id="app"></div>
 
   <script src="bundle.js"></script>
+
+  <script src="https://use.fontawesome.com/56a69bacf5.js"></script>
+  <link href="css/hover.css" rel="stylesheet" media="all">
+
+  <script>
+
+  </script>
+
 </body>
 </html>
