--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flowercakes</title>
     <link rel="stylesheet" href="main.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
 </head>
 <body>
   <div id="app"></div>
 
   <script src="bundle.js"></script>
 
-  <script src="https://use.fontawesome.com/56a69bacf5.js"></script>
-  <link href="css/hover.css" rel="stylesheet" media="all">
-
-  <script>
-
-  </script>
+  <!-- <script src="https://use.fontawesome.com/56a69bacf5.js"></script>
+  <link href="css/hover.css" rel="stylesheet" media="all"> -->
 
 </body>
 </html>
